# KA_Tool

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  pyproject.toml
examples/: example_comparison.py  example_plate_hrv.py  example_rotary_hrv.py
src/components/: base.py  cooling_coil.py  fan.py  frost_protection.py  heat_recovery.py  heating_coil.py  humidifier.py
src/heat_exchangers/: ntu_dry.py  ntu_wet.py  rotary.py
src/mcp_server/: server.py
src/system/: ahu_system.py  setpoint_logic.py  simulation.py
src/thermodynamics/: air_state.py  moist_air.py
src/weather/: open_meteo.py
tests/: test_components.py  test_moist_air.py  test_ntu_dry.py
