[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hvac-planning-tool"
version = "0.1.0"
description = "HVAC system energy analysis tool for concept planning"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "requests>=2.28",
    "mcp>=1.0",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
pythonPlatform = "All"
executionEnvironments = [
    { root = "." }
]
